[gd_scene load_steps=9 format=3 uid="uid://bi7lxcglf2tnc"]

[ext_resource type="Script" path="res://addons/silent_wolf/Auth/Login.gd" id="1"]
[ext_resource type="Theme" uid="uid://d2eakbmaefnt6" path="res://addons/silent_wolf/assets/themes/sw_theme.tres" id="1_bbh8k"]
[ext_resource type="PackedScene" uid="uid://clllbf6am8qdf" path="res://addons/silent_wolf/common/SWButton.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://bpn62aabunxva" path="res://addons/silent_wolf/assets/gfx/checkbox_checked.png" id="4_ak74a"]
[ext_resource type="Texture2D" uid="uid://bgs8a50ilk5cj" path="res://addons/silent_wolf/assets/gfx/checkbox_unchecked.png" id="5_3asm1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oxxi6"]
bg_color = Color(0.301961, 0.301961, 0.301961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qt8ss"]
bg_color = Color(0.301961, 0.301961, 0.301961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o52ik"]
bg_color = Color(0.301961, 0.301961, 0.301961, 1)

[node name="Login" type="TextureRect"]
anchors_preset = -1
anchor_right = 0.989
anchor_bottom = 0.984
offset_right = -1898.88
offset_bottom = -1062.72
mouse_filter = 2
theme = ExtResource("1_bbh8k")
script = ExtResource("1")

[node name="BackButton" parent="." instance=ExtResource("2")]
process_priority = 1
layout_mode = 0
offset_left = 595.0
offset_top = 148.0
offset_right = 740.0
offset_bottom = 197.0
focus_mode = 1
text = "‚Üê Back"

[node name="FormContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 435.0
offset_top = 226.0
offset_right = 1562.0
offset_bottom = 990.0
theme_override_constants/separation = 24
alignment = 1

[node name="Label" type="Label" parent="FormContainer"]
layout_mode = 2
theme_override_constants/line_spacing = 16
theme_override_font_sizes/font_size = 72
text = "Log in"
horizontal_alignment = 1

[node name="UsernameContainer" type="HBoxContainer" parent="FormContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="FormContainer/UsernameContainer"]
layout_mode = 2
text = "Username:     "
horizontal_alignment = 1

[node name="Username" type="LineEdit" parent="FormContainer/UsernameContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
max_length = 30

[node name="PasswordContainer" type="HBoxContainer" parent="FormContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="FormContainer/PasswordContainer"]
layout_mode = 2
text = "Password:      "

[node name="Password" type="LineEdit" parent="FormContainer/PasswordContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
max_length = 30
secret = true

[node name="LinkButton" type="LinkButton" parent="FormContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 0
text = "Forgot Password?"

[node name="RememberMeCheckBox" type="CheckBox" parent="FormContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_icons/checked = ExtResource("4_ak74a")
theme_override_icons/unchecked = ExtResource("5_3asm1")
theme_override_styles/normal = SubResource("StyleBoxFlat_oxxi6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qt8ss")
theme_override_styles/hover = SubResource("StyleBoxFlat_o52ik")
text = "Stay signed in for 30 days"
expand_icon = true

[node name="ErrorMessage" type="Label" parent="FormContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_colors/font_color = Color(0.92549, 0, 0, 1)
autowrap_mode = 1

[node name="LoginButton" parent="FormContainer" instance=ExtResource("2")]
custom_minimum_size = Vector2(280, 120)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "Submit"

[node name="ProcessingLabel" type="Label" parent="FormContainer"]
visible = false
layout_mode = 2
text = "Processing..."
horizontal_alignment = 1

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="FormContainer/LinkButton" to="." method="_on_LinkButton_pressed"]
[connection signal="pressed" from="FormContainer/LoginButton" to="." method="_on_LoginButton_pressed"]
